src/backends/drm/drm_gpu.cpp
@@ -253,7 +253,7 @@ bool DrmGpu::updateOutputs()
             return connector->id() == currentConnector;
         });
         if (it == m_connectors.end()) {
-            auto conn = std::make_unique<DrmConnector>(this, currentConnector);
+            auto conn = std::make_shared<DrmConnector>(this, currentConnector);
             if (!conn->init()) {
                 continue;
             }
@@ -278,7 +278,7 @@ bool DrmGpu::updateOutputs()
             qCDebug(KWIN_DRM, "New %soutput on GPU %s: %s", conn->isNonDesktop() ? "non-desktop " : "", qPrintable(m_devNode), qPrintable(conn->modelName()));
             const auto pipeline = conn->pipeline();
             m_pipelines << pipeline;
-            auto output = new DrmOutput(pipeline);
+            auto output = new DrmOutput(*it);
             m_drmOutputs << output;
             addedOutputs << output;
             Q_EMIT outputAdded(output);
