src/backends/drm/drm_output.h
@@ -35,7 +35,7 @@ class KWIN_EXPORT DrmOutput : public DrmAbstractOutput
 {
     Q_OBJECT
 public:
-    DrmOutput(DrmPipeline *pipeline);
+    DrmOutput(const std::shared_ptr<DrmConnector> &connector);
     ~DrmOutput() override;
 
     DrmConnector *connector() const;
@@ -71,7 +71,7 @@ private:
     void renderCursorQPainter(const RenderTarget &renderTarget);
 
     DrmPipeline *m_pipeline;
-    DrmConnector *m_connector;
+    const std::shared_ptr<DrmConnector> m_connector;
 
     bool m_setCursorSuccessful = false;
     bool m_moveCursorSuccessful = false;
